// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThreadLine > Snapshots > matches snapshot with custom className 1`] = `
<div
  class="min-h-px w-full min-w-px shrink-0 grow basis-0 border-l border-border custom-class"
  data-override-defaults="true"
  data-testid="thread-line"
/>
`;

exports[`ThreadLine > Snapshots > matches snapshot with default props 1`] = `
<div
  class="min-h-px w-full min-w-px shrink-0 grow basis-0 border-l border-border"
  data-override-defaults="true"
  data-testid="thread-line"
/>
`;
